<resources>
    <string name="app_name">Crypto6300</string>
    <string name="welcome_message">Welcome</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="error_password_required">Password required</string>
    <string name="error_username_required">Username required</string>
    <string name="error_wrong_username_or_password">Incorrect username or password.</string>

    <!-- administrator menu -->
    <string name="administrator_menu">Administrator Menu</string>
    <string name="logout">Logout</string>

    <!-- player menu -->
    <string name="player_menu">Player Menu</string>

    <!-- add cryptogram -->
...
