...
        android:id="@+id/loginFragment"
        android:name="edu.gatech.seclass.crypto6300.ui.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_adminMenuFragment"
            app:destination="@id/adminMenuFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_playerMenuFragment"
            app:destination="@id/playerMenuFragment"
            app:popUpTo="@id/nav_graph"
...
